# Odin

./: .env.example  .gitignore  BUILD_STATUS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  config.yml  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml
docs/: configuration.md  security.md  skills.md
packaging/: nfpm.yml  odin.service  postinstall.sh  preremove.sh
scripts/: codex_login.py  incus-deploy.sh  migrate.py  monitor.sh  odin-cli.py  seed.py  seed_knowledge.py
src/: __init__.py  __main__.py  async_utils.py  constants.py  setup_wizard.py  version.py
src/agents/: __init__.py  loop_bridge.py  manager.py  trajectory.py
src/audit/: __init__.py  diff_tracker.py  logger.py  signer.py
src/config/: __init__.py  schema.py
src/context/: loader.py
src/database/: __init__.py  repository.py
src/discord/: __init__.py  attachments.py  background_task.py  channel_config.py  channel_logger.py  client.py  response_guards.py  tool_loop_helpers.py  voice.py
src/health/: __init__.py  checker.py  grafana_alerts.py  metrics.py  server.py  startup.py  subsystem_guard.py
src/knowledge/: importer.py  store.py
src/learning/: reflector.py  runbook_detector.py  runbook_synthesizer.py
src/llm/: __init__.py  auxiliary.py  backoff.py  codex_auth.py  context_compressor.py  cost_tracker.py  model_router.py  openai_codex.py  secret_scrubber.py  system_prompt.py  types.py
src/models/: __init__.py  guild.py  infraction.py  reminder.py  (+1 more)
tests/: conftest.py  test_action_diffs.py  test_adaptive_compaction.py  test_affordances.py  test_agent_lifecycle.py  test_agent_trajectory.py  test_attachments.py  test_audit_signing.py  test_auxiliary_llm.py  test_backoff.py  test_branch_freshness.py  test_browser_automation.py  test_bulkhead.py  test_circuit_breaker.py  test_cli.py  test_client.py  test_comfyui_client.py  test_config.py  test_connection_pools.py  test_context.py  test_context_compressor.py  test_converters.py  test_cooldowns.py  test_cost_tracker.py  test_docker_ops.py  test_embeds.py  test_evaluative_discipline_prompt.py  test_execute_api.py  test_executor.py  test_executor_integration.py  test_executor_integration_smoke.py  test_fts_search.py  test_git_ops.py  test_github_webhook.py  test_gitlab_webhook.py  test_graceful_shutdown.py  test_grafana_alerts.py  test_health_checker.py  test_health_endpoints.py  test_history_replay.py  (+65 more)
ui/: index.html
(+142 files in other folders)
