[project]
name = "odin-bot"
version = "3.21.1"
description = "Odin — autonomous executor Discord bot, Heimdall-pattern with extended capability surface"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "discord.py>=2.3,<3",
    "aiohttp>=3.9",
    "aiofiles>=24.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "croniter>=2.0.0",
    "fastembed>=0.8.0",
    "sqlite-vec>=0.1.0",
]

[project.optional-dependencies]
# PDF text extraction (analyze_pdf tool)
pdf = ["PyMuPDF>=1.24.0"]
# Browser automation (browser_screenshot, browser_click, etc.)
browser = ["playwright>=1.40.0"]
# Voice channel support (STT/TTS)
voice = [
    "discord.py[voice]>=2.3",
    "davey>=0.1.4",
    "discord-ext-voice-recv>=0.5.0a0",
    "websockets>=12.0",
]
# All optional executor features
all = ["odin-bot[pdf,browser,voice]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov",
    "ruff",
    "aioresponses>=0.7",
]

[project.scripts]
odin = "src.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
